[package]
name = "bedrock-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
Presentation = ["bedrock/Presentation"]
VK_KHR_win32_surface = ["bedrock/VK_KHR_win32_surface"]
Allow1_3APIs = ["bedrock/Allow1_3APIs"]

[dependencies]
bedrock = { path = "..", features = ["Implements"] }

[target.'cfg(windows)'.dev-dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
]
